# Jump Start Changelog

## 2.3.0 - XX/XX/XXXX

* **Updated Theme Blvd framework to 2.8.0**
* New: Basic WordPress 5+ editor (i.e. Gutenberg) compatibility.
	* Added default block stylesheet from WordPress.
	* Added basic, general support for new `alignwide` and `alignfull` options.
	* Match media caption styling of blocks to default caption styling of theme.
	* Moved "Sidebar Layout" option to "Theme Layout" meta box, for editing both Posts and Pages.
* Improvement: Better spacing with Image elements, that are linked and have full-size images.
* Improvement: Better usage of `https` (instead of `http`) for things like share links, helper text, URL examples, etc.
* Fixed: Adding missing `base` key in `themeblvd_admin_module_caps` filtered array, so that the user capability of the Theme Bases admin page can be modified (see [tutorial](http://dev.themeblvd.com/tutorial/changing-user-role-access-for-admin-modules/)).
* Fixed: Milestone element animations not working when values contain commas.
* Fixed: Broken mobile menu navigation list background image, when using light background color.
* Fixed: Linking to `youtu.be` formatted links in a lightbox (sometimes) not working.
* Removed: Removed outdated style-editor.css file.
* Updated: FontAwesome to 5.5.

--------------------------------------------------------------

## 2.2.5 - 04/05/2018

* **Updated Theme Blvd framework to 2.7.5**
* Improvement: Better styling for password form on password-protected posts and pages.
* Fixed: Layout issues on password-protected custom layout pages, when password form is shown.
* Fixed: "Icon After Button Text" not working properly on buttons.
* Updated: FontAwesome to 5.0.9.

--------------------------------------------------------------

## 2.2.4 - 03/26/2018

* **Updated Theme Blvd framework to 2.7.4**
* Improvement: Navigational arrows now display with hero unit slider on mobile.